--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,97 @@ authors = [
   {name = "Ollie Burke", email = "ollie.burke@l2it.in2p3.fr"},
   {name = "Christian Chapman-Bird", email = "c.chapmanbird@gmail.com"},
 ]
+description = "Stable Fisher matrix computation for EMRI gravitational wave parameter estimation"
+readme = "README.md"
+license = {text = "MIT"}
+keywords = ["gravitational waves", "fisher matrix", "parameter estimation", "EMRI", "LISA"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Scientific/Engineering :: Astronomy",
+    "Topic :: Scientific/Engineering :: Physics",
+]
+dependencies = [
+    "numpy>=1.20.0",
+    "scipy>=1.7.0",
+    "h5py>=3.0.0",
+]
+
+[project.optional-dependencies]
+gpu = [
+    "cupy>=9.0.0",
+]
+docs = [
+    "sphinx>=5.0.0",
+    "sphinx_rtd_theme>=1.0.0",
+    "nbsphinx>=0.8.0",
+    "sphinx-autodoc-typehints>=1.12.0",
+    "sphinx-copybutton>=0.5.0",
+    "matplotlib>=3.5.0",
+    "jupyter>=1.0.0",
+    "ipykernel>=6.0.0",
+]
+dev = [
+    "pytest>=6.0.0",
+    "pytest-cov>=2.10.0",
+    "pytest-xdist>=2.0.0",
+    "black>=21.0.0",
+    "flake8>=3.8.0",
+    "isort>=5.0.0",
+    "mypy>=0.900",
+]
+all = [
+    "stableemrifisher[gpu,docs,dev]",
+]
+
+[project.urls]
+Homepage = "https://github.com/perturber/StableEMRIFisher"
+Documentation = "https://stableemrifisher.readthedocs.io"
+Repository = "https://github.com/perturber/StableEMRIFisher"
+Issues = "https://github.com/perturber/StableEMRIFisher/issues"
+
+[tool.setuptools.package-data]
+stableemrifisher = ["py.typed"]
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q --strict-markers"
+testpaths = ["tests"]
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+    "gpu: marks tests as requiring GPU (deselect with '-m \"not gpu\"')",
+    "integration: marks tests as integration tests",
+]
+filterwarnings = [
+    "ignore::UserWarning",
+    "ignore::DeprecationWarning",
+]
+
+[tool.coverage.run]
+source = ["stableemrifisher"]
+omit = [
+    "*/tests/*",
+    "*/test_*.py",
+    "*/__pycache__/*",
+]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "if self.debug:",
+    "if settings.DEBUG",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if 0:",
+    "if __name__ == .__main__.:",
+    "class .*\\bProtocol\\):",
+    "@(abc\\.)?abstractmethod",
+]
