--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "numpy>=1.20.0",
     "scipy>=1.7.0",
     "h5py>=3.0.0",
+    "cython>=3.1.3",
     "fastemriwaveforms==2.0.0",
 ]
 
@@ -50,13 +51,13 @@ gpu = [
 
 # Specific CUDA toolkit versions (Linux x86_64 only)
 # Note: These will install CUDA-specific versions of FastEMRIWaveforms
-cuda11 = [
+cuda11x = [
     "cupy-cuda11x>=12.0.0; platform_system=='Linux' and platform_machine=='x86_64'",
-    "fastemriwaveforms[cuda11]==2.0.0; platform_system=='Linux' and platform_machine=='x86_64'",
+    "fastemriwaveforms-cuda11x; platform_system=='Linux' and platform_machine=='x86_64'",
 ]
-cuda12 = [
+cuda12x = [
     "cupy-cuda12x>=12.0.0; platform_system=='Linux' and platform_machine=='x86_64'",
-    "fastemriwaveforms[cuda12]==2.0.0; platform_system=='Linux' and platform_machine=='x86_64'",
+    "fastemriwaveforms-cuda12x; platform_system=='Linux' and platform_machine=='x86_64'",
 ]
 
 # Documentation dependencies
