--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,13 +49,12 @@ gpu = [
 ]
 
 # Specific CUDA toolkit versions (Linux x86_64 only)
-# Note: These will install CUDA-specific versions of FastEMRIWaveforms
 cuda11 = [
     "cupy-cuda11x>=12.0.0; platform_system=='Linux' and platform_machine=='x86_64'",
     "fastemriwaveforms[cuda11]==2.0.0; platform_system=='Linux' and platform_machine=='x86_64'",
 ]
 cuda12 = [
-    "cupy-cuda12x>=12.0.0; platform_system=='Linux' and platform_machine=='x86_64'",
+    "cupy-cuda12>=12.0.0; platform_system=='Linux' and platform_machine=='x86_64'",
     "fastemriwaveforms[cuda12]==2.0.0; platform_system=='Linux' and platform_machine=='x86_64'",
 ]
 
