--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,7 @@ dev = [
     "flake8>=3.8.0",
     "isort>=5.0.0",
     "mypy>=0.900",
+    "pylint>=2.15.0",
 ]
 
 [project.urls]
@@ -145,3 +146,52 @@ extend-exclude = '''
   | docs/_build
 )/
 '''
+
+[tool.pylint]
+[tool.pylint.main]
+# Specify a score threshold to be exceeded before program exits with error.
+fail-under = 8.0
+
+# Return non-zero exit code if any of these messages/categories are detected,
+# even if score is above --fail-under value.
+fail-on = ["C", "R", "W", "E", "F"]
+
+[tool.pylint.messages_control]
+# Disable the message, report, category or checker with the given id(s).
+disable = [
+    "C0114",  # missing-module-docstring
+    "C0115",  # missing-class-docstring  
+    "C0116",  # missing-function-docstring
+    "R0903",  # too-few-public-methods
+    "R0913",  # too-many-arguments
+    "R0914",  # too-many-locals
+    "R0915",  # too-many-statements
+    "W0613",  # unused-argument
+    "C0103",  # invalid-name (for scientific variable names like m1, m2, etc.)
+    "R0902",  # too-many-instance-attributes
+    "R0912",  # too-many-branches
+    "import-error",  # Handle optional imports gracefully
+]
+
+[tool.pylint.format]
+# Maximum number of characters on a single line.
+max-line-length = 88
+
+[tool.pylint.design]
+# Maximum number of arguments for function / method.
+max-args = 15
+
+# Maximum number of attributes for a class.
+max-attributes = 20
+
+# Maximum number of boolean expressions in an if statement.
+max-bool-expr = 5
+
+# Maximum number of branch for function / method body.
+max-branches = 20
+
+# Maximum number of locals for function / method body.
+max-locals = 25
+
+# Maximum number of statements in function / method body.
+max-statements = 100
