--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "matplotlib>=3.10.5",
     "fastemriwaveforms==2.0.0",
     "setuptools >= 61.0",
+	"corner >= 2.2.3"
 ]
 
 [project.optional-dependencies]
